--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@expo/vector-icons": "^12.0.5",
     "expo": "^44.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
